✨ UI: Fixed the usage of 4 and 8 hex digits colors in CSS, which are not supported on iOS 9.3.

--- a/src/web/css/conkw.css
+++ b/src/web/css/conkw.css
@@ -294,7 +294,7 @@ clock #clock-minute {
 
 .lcd {
     background-color: #7da190;
-    box-shadow: inset 1px 1px 10px #000a;
+    box-shadow: inset 1px 1px 10px rgba(0, 0, 0, 0.67);
     font-family: LCDVARA, monospace;
     font-size: 15px;
     color: #283830;
